--- a/lab.html
+++ b/lab.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properities -->
-  <title>Les Illuminés</title>
+  <title>Light On Lab</title>
 
   <link rel="stylesheet" type="text/css" href="css/semantic.css">
+  <link rel="stylesheet" href="css/flickity.css" media="screen">
 
   <style type="text/css">
 
@@ -141,7 +142,9 @@
   </style>
 
   <script src="assets/library/jquery.min.js"></script>
-  <script src="js/semantic.js"></script>
+  <script src="js/semantic.js"></script>  
+  <script src="js/flickity.pkgd.min.js"></script>
+
 
   <script>
     $(document)
@@ -277,192 +280,213 @@
 
       <div class="ui text container">
         <h1 class="ui inverted header">
-          Les Illuminés
+          Light On Lab
         </h1>
-        <h2>Le meilleur des abat-jours en édition limitée</h2>
+        <h2>Votre lampe personnalisée en 3 clics</h2>
       </div>
 
     </div>
 
     <h1 class="ui center aligned header">
       <div class="content">
-        Designs du moment
-        <div class="sub header">En vente pendant encore <date id="time-remaining"></date></div>
-      </div>
+        Le concept en video
+        <!-- <div class="sub header">En vente pendant encore <date id="time-remaining"></date></div>
+      </div> -->
     </h1>
 
-    <div class="ui basic vertical segment cards">
-      <div class="ui centered card">
-        <div class="image">
-          <a class="ui violet ribbon label">Geek</a>
-          <img src="assets/images/fatboy_geek1.png">
-        </div>
-        <div class="content">
-          <a class="header">
-            Star Wars
-            <span class="ui label tag">15€</span>
-          </a>
-          <div class="meta">
-            <span class="author">by obiwan999</span>
-          </div>
-          <div class="description">
-            The light is strong with this one.
-          </div>
-        </div>
-        <div class="ui bottom attached primary button">
-          <i class="cart icon"></i>
-          Acheter
-        </div>
-      </div>
+    
 
-      <div class="ui centered card">
-        <div class="image">
-          <a class="ui green ribbon label">Design</a>
-          <img src="assets/images/fatboy_design1.png">
-        </div>
-        <div class="content">
-          <a class="header">
-            Automne
-            <span class="ui label tag">15€</span>
-          </a>
-          <div class="meta">
-            <span class="author">by abstractist</span>
-          </div>
-          <div class="description">
-            Les sanglots longs des violons de l'automne, blessent mon coeur d'une langueur monotone.
-          </div>
-        </div>
-        <div class="ui bottom attached primary button">
-          <i class="cart icon"></i>
-          Acheter
-        </div>
-      </div>
+    <div class="ui centered card">
 
-      <div class="ui centered card">
-        <div class="image">
-          <a class="ui pink ribbon label">Kidz</a>
-          <img src="assets/images/fatboy_kidz1.png">
-        </div>
-        <div class="content">
-          <a class="header">
-            Hello Kitty
-            <span class="ui label tag">15€</span>
-          </a>
-          <div class="meta">
-            <span class="author">by kittylol123</span>
+      <!-- div video -->
+      <div class="container video">
+        <div class="row">
+          <div class="col-sm-12">
+
+            <h2 style="text-align:center">Le concept en video</h2>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="//www.youtube.com/embed/iq6b_A94NrA"></iframe>
+            </div>
           </div>
-          <div class="description">
-            Wow. Such Pink. Very Kitty. Much Girly.
-          </div>
-        </div>
-        <div class="ui bottom attached primary button">
-          <i class="cart icon"></i>
-          Acheter
         </div>
       </div>
+      <!-- fin div video -->
+
+
+
     </div>
 
+    <!-- div des lampes recemment creees -->
+    <h1 class="ui center aligned header">
+      <div class="content">
+        Lampes récemment créées
+      </h1>
 
-
-    <div class="ui inverted padded segment center aligned">
-      <h2>Ne ratez aucun design en vous inscrivant à notre newsletter</h2>
-      <div class="ui form center aligned">
-        <div class="inline fields">
-          <div class="ten wide field">
-            <input type="text" placeholder="Email">
+      <div class="ui basic vertical segment cards">
+        <div class="ui centered card">
+          <div class="image">
+            <a class="ui violet ribbon label">Geek</a>
+            <img src="assets/images/fatboy_geek1.png">
           </div>
-          <div class="field">
-            <button class="ui button" type="submit">S'inscrire</button>
+          <div class="content">
+            <a class="header">
+              Star Wars
+              <span class="ui label tag">15€</span>
+            </a>
+            <div class="meta">
+              <span class="author">by obiwan999</span>
+            </div>
+            <div class="description">
+              The light is strong with this one.
+            </div>
+          </div>
+          <div class="ui bottom attached primary button">
+            <i class="cart icon"></i>
+            Acheter
+          </div>
+        </div>
+
+        <div class="ui centered card">
+          <div class="image">
+            <a class="ui green ribbon label">Design</a>
+            <img src="assets/images/fatboy_design1.png">
+          </div>
+          <div class="content">
+            <a class="header">
+              Automne
+              <span class="ui label tag">15€</span>
+            </a>
+            <div class="meta">
+              <span class="author">by abstractist</span>
+            </div>
+            <div class="description">
+              Les sanglots longs des violons de l'automne, blessent mon coeur d'une langueur monotone.
+            </div>
+          </div>
+          <div class="ui bottom attached primary button">
+            <i class="cart icon"></i>
+            Acheter
+          </div>
+        </div>
+
+        <div class="ui centered card">
+          <div class="image">
+            <a class="ui pink ribbon label">Kidz</a>
+            <img src="assets/images/fatboy_kidz1.png">
+          </div>
+          <div class="content">
+            <a class="header">
+              Hello Kitty
+              <span class="ui label tag">15€</span>
+            </a>
+            <div class="meta">
+              <span class="author">by kittylol123</span>
+            </div>
+            <div class="description">
+              Wow. Such Pink. Very Kitty. Much Girly.
+            </div>
+          </div>
+          <div class="ui bottom attached primary button">
+            <i class="cart icon"></i>
+            Acheter
           </div>
         </div>
       </div>
-    </div>
+      <!-- FIN div des lampes recemment creees -->
 
 
 
-    <div class="ui basic segment">
-      <div class="ui text container">
-        <h4 class="ui horizontal header divider">
-          <span>Interview</span>
-        </h4>
-        <h3 class="ui header">
-          Andy Warhol, designer du mois
-          <span class="right floated">
-            131 <i class="thumbs outline up icon"></i>
-            20 <i class="comment outline icon"></i>
-          </span>
-        </h3>
-        <img class="ui circular small right floated image" src="assets/images/andywarhol.jpg">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="ui large button">Lire l'interview</a>
-          <h4 class="ui horizontal header divider">
-            <span>Conseil</span>
-          </h4>
-          <h3 class="ui header">
-            Optimiser ses designs avant envoi
-            <span class="right floated">
-              62 <i class="thumbs outline up icon"></i>
-              36 <i class="comment outline icon"></i>
-            </span>
-          </h3>
-          <img class="ui small right floated image" src="assets/images/rulers.png">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="ui large button">En savoir plus</a>
-          </div>
-        </div>
-
-
-        <div class="ui inverted vertical footer segment">
-          <div class="ui container">
-            <div class="ui stackable inverted divided equal height stackable grid">
-              <div class="three wide column">
-                <h4 class="ui inverted header">About</h4>
-                <div class="ui inverted link list">
-                  <a href="#" class="item">Sitemap</a>
-                  <a href="#" class="item">Contact Us</a>
-                  <a href="#" class="item">Religious Ceremonies</a>
-                  <a href="#" class="item">Gazebo Plans</a>
-                </div>
-              </div>
-              <div class="three wide column">
-                <h4 class="ui inverted header">Services</h4>
-                <div class="ui inverted link list">
-                  <a href="#" class="item">Banana Pre-Order</a>
-                  <a href="#" class="item">DNA FAQ</a>
-                  <a href="#" class="item">How To Access</a>
-                  <a href="#" class="item">Favorite X-Men</a>
-                </div>
-              </div>
-              <div class="seven wide column">
-                <h4 class="ui inverted header">Recevoir les nouveaux designs par mail</h4>
-                <div class="ui container">
-                  <div class="ui form">
-                    <div class="inline fields">
-                      <div class="ten wide field">
-                        <input type="text" placeholder="Email">
-                      </div>
-                      <div class="six wide field">
-                        <button class="ui button" type="submit">S'inscrire</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+      <div class="ui inverted padded segment center aligned">
+        <h2>Ne ratez aucun design en vous inscrivant à notre newsletter</h2>
+        <div class="ui form center aligned">
+          <div class="inline fields">
+            <div class="ten wide field">
+              <input type="text" placeholder="Email">
+            </div>
+            <div class="field">
+              <button class="ui button" type="submit">S'inscrire</button>
             </div>
           </div>
         </div>
       </div>
 
-    </body>
+      <!--div de slide abat jour-ampoule-pied-->
+      <h1 class="h1center">Choisissez un pied, une ampoule et un abat-jour.</h1>
 
-    </html>
+      <!-- Flickity HTML init abat jour -->
+      <div class="gallery js-flickity"
+      data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
+      <div class="gallery-cell"><img src="assets/images/abatjour/2.jpg"></div>
+      <div class="gallery-cell"><img src="assets/images/abatjour/3.jpg"></div>
+      <div class="gallery-cell"><img src="assets/images/abatjour/4.jpg"></div>
+      <div class="gallery-cell"><img src="assets/images/abatjour/5.jpg"></div>
+      <div class="gallery-cell"><img src="assets/images/abatjour/7.png"></div>
+    </div>
+
+    <!-- Flickity HTML init ampoules-->
+    <div class="gallery js-flickity"
+    data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
+    <div class="gallery-cell"><img src="assets/images/ampoules/2-2.jpg"></div>
+    <div class="gallery-cell"><img src="assets/images/ampoules/3-1.jpg"></div>
+    <div class="gallery-cell"><img src="assets/images/ampoules/4-2.jpg"></div>
+    <div class="gallery-cell"><img src="assets/images/ampoules/6.jpg"></div>
+    <div class="gallery-cell"><img src="assets/images/ampoules/2-2.jpg"></div>
+  </div>
+
+  <!-- Flickity HTML init pieds-->
+  <div class="gallery js-flickity"
+  data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
+  <div class="gallery-cell"><img src="assets/images/pieds/3.png"></div>
+  <div class="gallery-cell"><img src="assets/images/pieds/4-1.png"></div>
+  <div class="gallery-cell"><img src="assets/images/pieds/5-1.png"></div>
+  <div class="gallery-cell"><img src="assets/images/pieds/6.png"></div>
+  <div class="gallery-cell"><img src="assets/images/pieds/Choix.jpg"></div>
+</div>
+
+
+
+
+<div class="ui inverted vertical footer segment">
+  <div class="ui container">
+    <div class="ui stackable inverted divided equal height stackable grid">
+      <div class="three wide column">
+        <h4 class="ui inverted header">About</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="item">Sitemap</a>
+          <a href="#" class="item">Contact Us</a>
+          <a href="#" class="item">Religious Ceremonies</a>
+          <a href="#" class="item">Gazebo Plans</a>
+        </div>
+      </div>
+      <div class="three wide column">
+        <h4 class="ui inverted header">Services</h4>
+        <div class="ui inverted link list">
+          <a href="#" class="item">Banana Pre-Order</a>
+          <a href="#" class="item">DNA FAQ</a>
+          <a href="#" class="item">How To Access</a>
+          <a href="#" class="item">Favorite X-Men</a>
+        </div>
+      </div>
+      <div class="seven wide column">
+        <h4 class="ui inverted header">Recevoir les nouveaux designs par mail</h4>
+        <div class="ui container">
+          <div class="ui form">
+            <div class="inline fields">
+              <div class="ten wide field">
+                <input type="text" placeholder="Email">
+              </div>
+              <div class="six wide field">
+                <button class="ui button" type="submit">S'inscrire</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+</body>
+
+</html>
