change div video

--- a/lab.html
+++ b/lab.html
@@ -288,191 +288,189 @@
     </div>
 
     <h1 class="ui center aligned header">
-      <div class="content">
-        Le concept en video
-      </h1>
-
-      <!-- div video -->
-      <div class="container video">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="//www.youtube.com/embed/iq6b_A94NrA"></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- fin div video -->
-
-
-
-
-      <!--div de slide abat jour-ampoule-pied-->
-      <h1 class="ui center aligned header">
-        <div class="content">
-          Choisissez un pied, une ampoule et un abat-jour.
-        </h1>
-
-
-        <!-- Flickity HTML init abat jour -->
-        <div class="gallery js-flickity"
-        data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
-        <div class="gallery-cell"><img src="assets/images/abatjour/2.jpg"></div>
-        <div class="gallery-cell"><img src="assets/images/abatjour/3.jpg"></div>
-        <div class="gallery-cell"><img src="assets/images/abatjour/4.jpg"></div>
-        <div class="gallery-cell"><img src="assets/images/abatjour/5.jpg"></div>
-        <div class="gallery-cell"><img src="assets/images/abatjour/7.png"></div>
-      </div>
-
-      <!-- Flickity HTML init ampoules-->
-      <div class="gallery js-flickity"
-      data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
-      <div class="gallery-cell"><img src="assets/images/ampoules/2-2.jpg"></div>
-      <div class="gallery-cell"><img src="assets/images/ampoules/3-1.jpg"></div>
-      <div class="gallery-cell"><img src="assets/images/ampoules/4-2.jpg"></div>
-      <div class="gallery-cell"><img src="assets/images/ampoules/6.jpg"></div>
-      <div class="gallery-cell"><img src="assets/images/ampoules/2-2.jpg"></div>
-    </div>
-
-    <!-- Flickity HTML init pieds-->
-    <div class="gallery js-flickity"
-    data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
-    <div class="gallery-cell"><img src="assets/images/pieds/3.png"></div>
-    <div class="gallery-cell"><img src="assets/images/pieds/4-1.png"></div>
-    <div class="gallery-cell"><img src="assets/images/pieds/5-1.png"></div>
-    <div class="gallery-cell"><img src="assets/images/pieds/6.png"></div>
-    <div class="gallery-cell"><img src="assets/images/pieds/Choix.jpg"></div>
-  </div>
-
-  <div class="ui inverted padded segment center aligned">
-    <h2>Ne ratez aucun design en vous inscrivant à notre newsletter</h2>
-    <div class="ui form center aligned">
-      <div class="inline fields">
-        <div class="ten wide field">
-          <input type="text" placeholder="Email">
-        </div>
-        <div class="field">
-          <button class="ui button" type="submit">S'inscrire</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-  <!-- div des lampes recemment creees -->
-  <h1 class="ui center aligned header">
-    <div class="content">
-      Lampes récemment créées
+      <div class="content">Le concept en video</div>
     </h1>
 
-    <div class="ui basic vertical segment cards">
-      <div class="ui centered card">
-        <div class="image">
-          <a class="ui violet ribbon label">Geek</a>
-          <img src="assets/images/fatboy_geek1.png">
-        </div>
-        <div class="content">
-          <a class="header">
-            Star Wars
-            <span class="ui label tag">15€</span>
-          </a>
-          <div class="meta">
-            <span class="author">by obiwan999</span>
+    <!-- div video -->
+    <div class="ui centered card">
+      <div class="video">
+        <!-- <div class="col-sm-12"> -->
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="//www.youtube.com/embed/iq6b_A94NrA"></iframe>
           </div>
-          <div class="description">
-            The light is strong with this one.
-          </div>
-        </div>
-        <div class="ui bottom attached primary button">
-          <i class="cart icon"></i>
-          Acheter
-        </div>
-      </div>
-
-      <div class="ui centered card">
-        <div class="image">
-          <a class="ui green ribbon label">Design</a>
-          <img src="assets/images/fatboy_design1.png">
-        </div>
-        <div class="content">
-          <a class="header">
-            Automne
-            <span class="ui label tag">15€</span>
-          </a>
-          <div class="meta">
-            <span class="author">by abstractist</span>
-          </div>
-          <div class="description">
-            Les sanglots longs des violons de l'automne, blessent mon coeur d'une langueur monotone.
-          </div>
-        </div>
-        <div class="ui bottom attached primary button">
-          <i class="cart icon"></i>
-          Acheter
-        </div>
-      </div>
-
-      <div class="ui centered card">
-        <div class="image">
-          <a class="ui pink ribbon label">Kidz</a>
-          <img src="assets/images/fatboy_kidz1.png">
-        </div>
-        <div class="content">
-          <a class="header">
-            Hello Kitty
-            <span class="ui label tag">15€</span>
-          </a>
-          <div class="meta">
-            <span class="author">by kittylol123</span>
-          </div>
-          <div class="description">
-            Wow. Such Pink. Very Kitty. Much Girly.
-          </div>
-        </div>
-        <div class="ui bottom attached primary button">
-          <i class="cart icon"></i>
-          Acheter
         </div>
       </div>
     </div>
-    <!-- FIN div des lampes recemment creees -->
+    <!-- fin div video -->
+
+
+
+
+    <!--div de slide abat jour-ampoule-pied-->
+    <h1 class="ui center aligned header">
+      <div class="content">
+        Choisissez un pied, une ampoule et un abat-jour.
+      </h1>
+
+
+      <!-- Flickity HTML init abat jour -->
+      <div class="gallery js-flickity"
+      data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
+      <div class="gallery-cell"><img src="assets/images/abatjour/2.jpg"></div>
+      <div class="gallery-cell"><img src="assets/images/abatjour/3.jpg"></div>
+      <div class="gallery-cell"><img src="assets/images/abatjour/4.jpg"></div>
+      <div class="gallery-cell"><img src="assets/images/abatjour/5.jpg"></div>
+      <div class="gallery-cell"><img src="assets/images/abatjour/7.png"></div>
+    </div>
+
+    <!-- Flickity HTML init ampoules-->
+    <div class="gallery js-flickity"
+    data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
+    <div class="gallery-cell"><img src="assets/images/ampoules/2-2.jpg"></div>
+    <div class="gallery-cell"><img src="assets/images/ampoules/3-1.jpg"></div>
+    <div class="gallery-cell"><img src="assets/images/ampoules/4-2.jpg"></div>
+    <div class="gallery-cell"><img src="assets/images/ampoules/6.jpg"></div>
+    <div class="gallery-cell"><img src="assets/images/ampoules/2-2.jpg"></div>
+  </div>
+
+  <!-- Flickity HTML init pieds-->
+  <div class="gallery js-flickity"
+  data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
+  <div class="gallery-cell"><img src="assets/images/pieds/3.png"></div>
+  <div class="gallery-cell"><img src="assets/images/pieds/4-1.png"></div>
+  <div class="gallery-cell"><img src="assets/images/pieds/5-1.png"></div>
+  <div class="gallery-cell"><img src="assets/images/pieds/6.png"></div>
+  <div class="gallery-cell"><img src="assets/images/pieds/Choix.jpg"></div>
+</div>
+
+<div class="ui inverted padded segment center aligned">
+  <h2>Ne ratez aucun design en vous inscrivant à notre newsletter</h2>
+  <div class="ui form center aligned">
+    <div class="inline fields">
+      <div class="ten wide field">
+        <input type="text" placeholder="Email">
+      </div>
+      <div class="field">
+        <button class="ui button" type="submit">S'inscrire</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- div des lampes recemment creees -->
+<h1 class="ui center aligned header">
+  <div class="content">
+    Lampes récemment créées
+  </h1>
+
+  <div class="ui basic vertical segment cards">
+    <div class="ui centered card">
+      <div class="image">
+        <a class="ui violet ribbon label">Geek</a>
+        <img src="assets/images/fatboy_geek1.png">
+      </div>
+      <div class="content">
+        <a class="header">
+          Star Wars
+          <span class="ui label tag">15€</span>
+        </a>
+        <div class="meta">
+          <span class="author">by obiwan999</span>
+        </div>
+        <div class="description">
+          The light is strong with this one.
+        </div>
+      </div>
+      <div class="ui bottom attached primary button">
+        <i class="cart icon"></i>
+        Acheter
+      </div>
+    </div>
+
+    <div class="ui centered card">
+      <div class="image">
+        <a class="ui green ribbon label">Design</a>
+        <img src="assets/images/fatboy_design1.png">
+      </div>
+      <div class="content">
+        <a class="header">
+          Automne
+          <span class="ui label tag">15€</span>
+        </a>
+        <div class="meta">
+          <span class="author">by abstractist</span>
+        </div>
+        <div class="description">
+          Les sanglots longs des violons de l'automne, blessent mon coeur d'une langueur monotone.
+        </div>
+      </div>
+      <div class="ui bottom attached primary button">
+        <i class="cart icon"></i>
+        Acheter
+      </div>
+    </div>
+
+    <div class="ui centered card">
+      <div class="image">
+        <a class="ui pink ribbon label">Kidz</a>
+        <img src="assets/images/fatboy_kidz1.png">
+      </div>
+      <div class="content">
+        <a class="header">
+          Hello Kitty
+          <span class="ui label tag">15€</span>
+        </a>
+        <div class="meta">
+          <span class="author">by kittylol123</span>
+        </div>
+        <div class="description">
+          Wow. Such Pink. Very Kitty. Much Girly.
+        </div>
+      </div>
+      <div class="ui bottom attached primary button">
+        <i class="cart icon"></i>
+        Acheter
+      </div>
+    </div>
+  </div>
+  <!-- FIN div des lampes recemment creees -->
 
 
 
 
 
-    <div class="ui inverted vertical footer segment">
-      <div class="ui container">
-        <div class="ui stackable inverted divided equal height stackable grid">
-          <div class="three wide column">
-            <h4 class="ui inverted header">About</h4>
-            <div class="ui inverted link list">
-              <a href="#" class="item">Sitemap</a>
-              <a href="#" class="item">Contact Us</a>
-              <a href="#" class="item">Religious Ceremonies</a>
-              <a href="#" class="item">Gazebo Plans</a>
-            </div>
+  <div class="ui inverted vertical footer segment">
+    <div class="ui container">
+      <div class="ui stackable inverted divided equal height stackable grid">
+        <div class="three wide column">
+          <h4 class="ui inverted header">About</h4>
+          <div class="ui inverted link list">
+            <a href="#" class="item">Sitemap</a>
+            <a href="#" class="item">Contact Us</a>
+            <a href="#" class="item">Religious Ceremonies</a>
+            <a href="#" class="item">Gazebo Plans</a>
           </div>
-          <div class="three wide column">
-            <h4 class="ui inverted header">Services</h4>
-            <div class="ui inverted link list">
-              <a href="#" class="item">Banana Pre-Order</a>
-              <a href="#" class="item">DNA FAQ</a>
-              <a href="#" class="item">How To Access</a>
-              <a href="#" class="item">Favorite X-Men</a>
-            </div>
+        </div>
+        <div class="three wide column">
+          <h4 class="ui inverted header">Services</h4>
+          <div class="ui inverted link list">
+            <a href="#" class="item">Banana Pre-Order</a>
+            <a href="#" class="item">DNA FAQ</a>
+            <a href="#" class="item">How To Access</a>
+            <a href="#" class="item">Favorite X-Men</a>
           </div>
-          <div class="seven wide column">
-            <h4 class="ui inverted header">Recevoir les nouveaux designs par mail</h4>
-            <div class="ui container">
-              <div class="ui form">
-                <div class="inline fields">
-                  <div class="ten wide field">
-                    <input type="text" placeholder="Email">
-                  </div>
-                  <div class="six wide field">
-                    <button class="ui button" type="submit">S'inscrire</button>
-                  </div>
+        </div>
+        <div class="seven wide column">
+          <h4 class="ui inverted header">Recevoir les nouveaux designs par mail</h4>
+          <div class="ui container">
+            <div class="ui form">
+              <div class="inline fields">
+                <div class="ten wide field">
+                  <input type="text" placeholder="Email">
+                </div>
+                <div class="six wide field">
+                  <button class="ui button" type="submit">S'inscrire</button>
                 </div>
               </div>
             </div>
@@ -481,6 +479,7 @@
       </div>
     </div>
   </div>
+</div>
 
 </body>
 
