--- a/post3.html
+++ b/post3.html
@@ -131,25 +131,25 @@
   <script src="js/semantic.js"></script>
 
   <script>
-  $(document)
+    $(document)
     .ready(function() {
 
       // fix menu when passed
       $('.masthead')
-        .visibility({
-          once: false,
-          onBottomPassed: function() {
-            $('.fixed.menu').transition('fade in');
-          },
-          onBottomPassedReverse: function() {
-            $('.fixed.menu').transition('fade out');
-          }
-        })
+      .visibility({
+        once: false,
+        onBottomPassed: function() {
+          $('.fixed.menu').transition('fade in');
+        },
+        onBottomPassedReverse: function() {
+          $('.fixed.menu').transition('fade out');
+        }
+      })
       ;
 
       // create sidebar and attach to menu open
       $('.ui.sidebar')
-        .sidebar('attach events', '.toc.item')
+      .sidebar('attach events', '.toc.item')
       ;
 
       // vote
@@ -165,160 +165,161 @@
       });
 
     })
-  ;
+    ;
   </script>
 </head>
 <body>
 
-<!-- Following Menu -->
-<div class="ui large top fixed hidden menu">
-  <div class="ui container">
+  <!-- Following Menu -->
+  <div class="ui large top fixed hidden menu">
+    <div class="ui container">
+      <a class="main item" href="index.html">Les Illuminés</a>
+      <a class="item" href="index.html">Achetez</a>
+      <a class="item" href="vote.html">Votez</a>
+      <a class="active item" href="post.html">Publiez</a>
+      <a class="item" href="lab.html">lightOnLab</a>
+      <a class="item">Aide</a>
+      <div class="right menu">
+        <div class="item">
+          <a class="ui button">Connexion</a>
+        </div>
+        <div class="item">
+          <a class="ui primary button">S'inscrire</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Sidebar Menu -->
+  <div class="ui vertical inverted sidebar menu">
     <a class="main item" href="index.html">Les Illuminés</a>
     <a class="item" href="index.html">Achetez</a>
     <a class="item" href="vote.html">Votez</a>
     <a class="active item" href="post.html">Publiez</a>
-    <a class="item">Discutez</a>
+    <a class="item" href="lab.html">lightOnLab</a>
     <a class="item">Aide</a>
-    <div class="right menu">
-      <div class="item">
-        <a class="ui button">Connexion</a>
-      </div>
-      <div class="item">
-        <a class="ui primary button">S'inscrire</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Sidebar Menu -->
-<div class="ui vertical inverted sidebar menu">
-  <a class="main item" href="index.html">Les Illuminés</a>
-  <a class="item" href="index.html">Achetez</a>
-  <a class="item" href="vote.html">Votez</a>
-  <a class="active item" href="post.html">Publiez</a>
-  <a class="item">Discutez</a>
-  <a class="item">Aide</a>
-  <a class="item">Connexion</a>
-  <a class="item">S'inscrire</a>
-</div>
-
-
-<!-- Page Contents -->
-<div class="pusher">
-  <div class="ui inverted vertical masthead center aligned segment">
-
-    <div class="ui container">
-      <div class="ui large secondary inverted pointing menu">
-        <a class="toc item">
-          <i class="sidebar icon"></i>
-        </a>
-        <a class="main item" href="index.html">Les Illuminés</a>
-        <a class="item" href="index.html">Achetez</a>
-        <a class="item" href="vote.html">Votez</a>
-        <a class="active item" href="post.html">Publiez</a>
-        <a class="item">Discutez</a>
-        <a class="item">Aide</a>
-        <div class="right item">
-          <a class="ui inverted button">Connexion</a>
-          <a class="ui inverted button">S'inscrire</a>
-        </div>
-      </div>
-    </div>
-
-    <div class="ui text container">
-      <h1 class="ui inverted header">
-        Publiez
-      </h1>
-      <h2>Postez vos propres designs d'abat-jours</h2>
-    </div>
+    <a class="item">Connexion</a>
+    <a class="item">S'inscrire</a>
   </div>
 
 
-  <div class="ui basic vertical segment center aligned">
-    <div class="ui ordered steps">
-      <div class="completed step">
-        <div class="content">
-          <div class="title">Upload</div>
-          <div class="description">Envoi du fichier</div>
-        </div>
-      </div>
-      <div class="completed step">
-        <div class="content">
-          <div class="title">Informations</div>
-          <div class="description">Saisie des détails</div>
-        </div>
-      </div>
-      <div class="active step">
-        <div class="content">
-          <div class="title">Confirmation</div>
-          <div class="description">Validation du design</div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <!-- Page Contents -->
+  <div class="pusher">
+    <div class="ui inverted vertical masthead center aligned segment">
 
-
-  <div class="ui basic segment narrow">
-    <div class="ui attached message">
-      <div class="header">
-        Confirmation
-      </div>
-      <p>Validation du design</p>
-    </div>
-    <div class="ui attached fluid segment">
-      <div class="ui centered card">
-        <div class="image">
-          <a class="ui pink ribbon label">Kidz</a>
-          <img src="assets/images/fatboy_kidz1.png">
-        </div>
-        <div class="content">
-          <a class="header">
-            My awesome design
+      <div class="ui container">
+        <div class="ui large secondary inverted pointing menu">
+          <a class="toc item">
+            <i class="sidebar icon"></i>
           </a>
-          <div class="meta">
-            <span class="author">by allegrem</span>
-          </div>
-          <div class="description">
-            Yo gonna buy dat lamp shade.
+          <a class="main item" href="index.html">Les Illuminés</a>
+          <a class="item" href="index.html">Achetez</a>
+          <a class="item" href="vote.html">Votez</a>
+          <a class="active item" href="post.html">Publiez</a>
+          <a class="item" href="lab.html">lightOnLab</a>
+          <a class="item">Aide</a>
+          <div class="right item">
+            <a class="ui inverted button">Connexion</a>
+            <a class="ui inverted button">S'inscrire</a>
           </div>
         </div>
       </div>
-      <a class="ui blue submit button">Publiez</a>
+
+      <div class="ui text container">
+        <h1 class="ui inverted header">
+          Publiez
+        </h1>
+        <h2>Postez vos propres designs d'abat-jours</h2>
+      </div>
     </div>
-  </div>
 
 
-  <div class="ui inverted vertical footer segment">
-    <div class="ui container">
-      <div class="ui stackable inverted divided equal height stackable grid">
-        <div class="three wide column">
-          <h4 class="ui inverted header">About</h4>
-          <div class="ui inverted link list">
-            <a href="#" class="item">Sitemap</a>
-            <a href="#" class="item">Contact Us</a>
-            <a href="#" class="item">Religious Ceremonies</a>
-            <a href="#" class="item">Gazebo Plans</a>
+    <div class="ui basic vertical segment center aligned">
+      <div class="ui ordered steps">
+        <div class="completed step">
+          <div class="content">
+            <div class="title">Upload</div>
+            <div class="description">Envoi du fichier</div>
           </div>
         </div>
-        <div class="three wide column">
-          <h4 class="ui inverted header">Services</h4>
-          <div class="ui inverted link list">
-            <a href="#" class="item">Banana Pre-Order</a>
-            <a href="#" class="item">DNA FAQ</a>
-            <a href="#" class="item">How To Access</a>
-            <a href="#" class="item">Favorite X-Men</a>
+        <div class="completed step">
+          <div class="content">
+            <div class="title">Informations</div>
+            <div class="description">Saisie des détails</div>
           </div>
         </div>
-        <div class="seven wide column">
-          <h4 class="ui inverted header">Recevoir les nouveaux designs par mail</h4>
-          <div class="ui container">
-            <div class="ui form">
-              <div class="inline fields">
-                <div class="ten wide field">
-                  <input type="text" placeholder="Email">
-                </div>
-                <div class="six wide field">
-                  <button class="ui button" type="submit">S'inscrire</button>
+        <div class="active step">
+          <div class="content">
+            <div class="title">Confirmation</div>
+            <div class="description">Validation du design</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="ui basic segment narrow">
+      <div class="ui attached message">
+        <div class="header">
+          Confirmation
+        </div>
+        <p>Validation du design</p>
+      </div>
+      <div class="ui attached fluid segment">
+        <div class="ui centered card">
+          <div class="image">
+            <a class="ui pink ribbon label">Kidz</a>
+            <img src="assets/images/fatboy_kidz1.png">
+          </div>
+          <div class="content">
+            <a class="header">
+              My awesome design
+            </a>
+            <div class="meta">
+              <span class="author">by allegrem</span>
+            </div>
+            <div class="description">
+              Yo gonna buy dat lamp shade.
+            </div>
+          </div>
+        </div>
+        <a class="ui blue submit button">Publiez</a>
+      </div>
+    </div>
+
+
+    <div class="ui inverted vertical footer segment">
+      <div class="ui container">
+        <div class="ui stackable inverted divided equal height stackable grid">
+          <div class="three wide column">
+            <h4 class="ui inverted header">About</h4>
+            <div class="ui inverted link list">
+              <a href="#" class="item">Sitemap</a>
+              <a href="#" class="item">Contact Us</a>
+              <a href="#" class="item">Religious Ceremonies</a>
+              <a href="#" class="item">Gazebo Plans</a>
+            </div>
+          </div>
+          <div class="three wide column">
+            <h4 class="ui inverted header">Services</h4>
+            <div class="ui inverted link list">
+              <a href="#" class="item">Banana Pre-Order</a>
+              <a href="#" class="item">DNA FAQ</a>
+              <a href="#" class="item">How To Access</a>
+              <a href="#" class="item">Favorite X-Men</a>
+            </div>
+          </div>
+          <div class="seven wide column">
+            <h4 class="ui inverted header">Recevoir les nouveaux designs par mail</h4>
+            <div class="ui container">
+              <div class="ui form">
+                <div class="inline fields">
+                  <div class="ten wide field">
+                    <input type="text" placeholder="Email">
+                  </div>
+                  <div class="six wide field">
+                    <button class="ui button" type="submit">S'inscrire</button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -327,7 +328,6 @@
       </div>
     </div>
   </div>
-</div>
 
 </body>
 
