video centered MAJ img

--- a/lab.html
+++ b/lab.html
@@ -138,7 +138,7 @@
       margin-left: 1em;
     }
 
-    
+
     /* slider */
     .gallery {
       background: #EEE;
@@ -288,15 +288,13 @@
     </h1>
 
     <!-- div video -->
-    <div class="ui centered">
+    <div class="ui center aligned header">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="//www.youtube.com/embed/iq6b_A94NrA"></iframe>
 
       </div>
     </div>
     <!-- fin div video -->
-
-
 
 
     <!--div de slide abat jour-ampoule-pied-->
@@ -312,7 +310,7 @@
     <div class="gallery-cell"><img src="assets/images/abatjour/3.jpg"></div>
     <div class="gallery-cell"><img src="assets/images/abatjour/4.jpg"></div>
     <div class="gallery-cell"><img src="assets/images/abatjour/5.jpg"></div>
-    <div class="gallery-cell"><img src="assets/images/abatjour/7.png"></div>
+    <div class="gallery-cell"><img src="assets/images/abatjour/Bleu.png"></div>
   </div>
 
   <!-- Flickity HTML init ampoules-->
@@ -321,17 +319,18 @@
   <div class="gallery-cell"><img src="assets/images/ampoules/2-2.jpg"></div>
   <div class="gallery-cell"><img src="assets/images/ampoules/3-1.jpg"></div>
   <div class="gallery-cell"><img src="assets/images/ampoules/4-2.jpg"></div>
-  <div class="gallery-cell"><img src="assets/images/ampoules/6.jpg"></div>
-  <div class="gallery-cell"><img src="assets/images/ampoules/2-2.jpg"></div>
+  <div class="gallery-cell"><img src="assets/images/ampoules/5-2.jpg"></div>
+  <div class="gallery-cell"><img src="assets/images/ampoules/6.png"></div>
+  <div class="gallery-cell"><img src="assets/images/ampoules/7.png"></div>
 </div>
 
 <!-- Flickity HTML init pieds-->
 <div class="gallery js-flickity"
 data-flickity-options='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
 <div class="gallery-cell"><img src="assets/images/pieds/3.png"></div>
-<div class="gallery-cell"><img src="assets/images/pieds/4-1.png"></div>
-<div class="gallery-cell"><img src="assets/images/pieds/5-1.png"></div>
-<div class="gallery-cell"><img src="assets/images/pieds/6.png"></div>
+<div class="gallery-cell"><img src="assets/images/pieds/4-1.jpg"></div>
+<div class="gallery-cell"><img src="assets/images/pieds/5-1.jpg"></div>
+<div class="gallery-cell"><img src="assets/images/pieds/6.jpg"></div>
 <div class="gallery-cell"><img src="assets/images/pieds/Choix.jpg"></div>
 </div>
 
